--- a/Pumpkin/pumpkin.css
+++ b/Pumpkin/pumpkin.css
@@ -36,5 +36,20 @@ overflow: hidden;
   height: 11em;
   width: 15em;
   background: #f68632;
-  border: 0.4em solid ;
+  border: 0.4em solid #a14907;
+  border-radius: 70%/110%;
+position: relative;
+box-shadow: inset 0 0 20px #a14907, 0 0 30px -4px red;
+z-index: 1;
+animation: float 3s infinite;
+}
+
+.pumpkin .texture {
+  height: 10.8em;
+  width: 6.5em;
+  position: absolute;
+  bottom: -0.4em;
+  left: 4em;
+  border-radius: 70%/130%;
+  border-bottom: 0.5em; solid 
 }
