--- a/Pumpkin/pumpkin.css
+++ b/Pumpkin/pumpkin.css
@@ -51,5 +51,46 @@ animation: float 3s infinite;
   bottom: -0.4em;
   left: 4em;
   border-radius: 70%/130%;
-  border-bottom: 0.5em; solid 
+  border-bottom: 0.5em solid #a14907;
+  border-top: 0.5 solid #a14907;
+}
+
+.pumpkin .texture::after {
+  content: '';
+  display: block;
+  height: 10.7em;
+  width: 12em;
+  position: absolute;
+  bottom: -0.4em;
+  left: -2.5em;
+  border-radius: 70%/130%;
+  border-bottom: 0.5em solid #a14907;
+  border-top: 0.5em solid #a14907
+}
+
+.pumpkin .root {
+  background: #517f54;
+  height: 2.8em;
+  width: 1.25em;
+  position: absolute;
+  left: calc(7.5em - 0.625em);
+  top: -2.7em;
+  transform: rotate(5deg);
+  border-radius: 30% 20 70% 10%;
+  z-index: 1;
+  box-shadow: inset 0 0 10px #29412b;
+}
+
+.pumpkin .eye {
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 0.8em solid transparent;
+  top: 2.8em;
+}
+
+.pumpkin .eye.right {
+  right:3.7em;
+  border-left: 2.4em solid #401b03;
+
 }
